<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/f">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/titulo1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/ing_sof"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/digno1"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dgino2"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10" />

            <TextView
                android:id="@+id/d1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definitive"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/app_moviles"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno1"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t5"
                android:layout_width="372dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dgino2"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t6"
                android:layout_width="372dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10" />

            <TextView
                android:id="@+id/d2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definitive"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/seg_inf"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno1"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t8"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dgino2"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t9"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno3"

                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10" />


            <TextView
                android:id="@+id/d3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definitive"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/proy_agiles"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t10"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/digno1"

                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t11"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dgino2"

                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t12"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.21"
                android:ems="10"
                android:hint="@string/digno3"

                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definitive"
                android:textAlignment="center"
                android:textSize="18sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="operar"
                android:text="@string/calcu_defi" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="denotas"
                android:text="@string/Acerca" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>




</LinearLayout>
